# feder

./: .hongdown.toml  AGENTS.md  AI_POLICY.md  CONTRIBUTING.md  Cargo.toml  README.md  mise.toml
.agents/skills/commit/: SKILL.md
.github/workflows/: main.yaml
crates/feder-core/: Cargo.toml
crates/feder-core/src/: addressing.rs  inbound.rs  lib.rs  signature.rs  webfinger.rs
crates/feder-runtime/: Cargo.toml
crates/feder-runtime/src/: delivery.rs  lib.rs  signature.rs  webfinger.rs
crates/feder-vocab/: Cargo.toml
crates/feder-vocab/src/: lib.rs
crates/feder-vocab/tests/: phase1_shapes.rs
