[workspace]
members = [
  "crates/feder-core",
  "crates/feder-vocab",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
iri-string = { version = "0.7.12", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.140"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
