[workspace]
members = [
  "crates/feder-core",
  "crates/feder-runtime",
  "crates/feder-vocab",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
iri-string = { version = "0.7.12", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.140"
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
chrono = "0.4"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
