[package]
name = "feder-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde_json = "1"
sha2 = "0.10"
url = "2"

[lints]
workspace = true
