[package]
name = "feder-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
rsa.workspace = true
chrono.workspace = true
url.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
